Uebung Satz animieren

--- a/01_Cover_Nachsetzen/ND_Cover_Nachsetzen.html
+++ b/01_Cover_Nachsetzen/ND_Cover_Nachsetzen.html
@@ -133,7 +133,8 @@ p {
 .verlag {
   grid-column: 3;
   grid-row: 8;
-  align-self: flex-end;
+  align-items: flex-end;
+  /* align-self: flex-end; */
 }
 
 </style>
