--- a/06_Layout_Media_Query/ND_Layout_Media_Query.html
+++ b/06_Layout_Media_Query/ND_Layout_Media_Query.html
@@ -30,9 +30,7 @@
           sind allzeit bereit
           bestechen durch ihr geld und ihre lässigkeit
         </p>
-
       </div>
-
 
 
     </div>
@@ -57,16 +55,17 @@ html {
   display: grid;
   grid-template-areas: "titel titel"
                       ". untertitel"
-                      "grundtext";
+                      "grundtext .";
 
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: 1fr min-content 1fr;
   grid-gap: 1em;
 }
 
 h1 {
   font-family: "Helvetica Neue";
   font-weight: black;
-  font-size: 10em;
+  font-size: 12em;
   line-height: 1em;
   text-align: center;
   color: black;
@@ -82,6 +81,8 @@ h2 {
   text-align: left;
   color: black;
   margin-top: 0em;
+  writing-mode: vertical-rl;
+  transform: rotate(180deg);
 }
 
 p {
