--- a/00_Website_Text_Projekt/ND_Website_Text_Projekt.html
+++ b/00_Website_Text_Projekt/ND_Website_Text_Projekt.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Schrift</title>
+  <title>Wer nimmt in den Arm?</title>
 
   <link rel="stylesheet" type="text/css" href="./styles/normalize.css">
   <link rel="stylesheet" type="text/css" href="./styles/main.css">
