--- a/00_Website_Text_Projekt/ND_Website_Text_Projekt.html
+++ b/00_Website_Text_Projekt/ND_Website_Text_Projekt.html
@@ -51,7 +51,7 @@
 
         <div class="sechs_song_zeile">
           <div class="strophe_titel">sind</div>
-          <div class="strophe_grundtext">auf dieser Welt einfach unersetzlich</div>
+          <div class="strophe_grundtext">auf dieser Welt <br>einfach unersetzlich</div>
         </div>
 
 
@@ -64,7 +64,7 @@
 
       <!-- BEREICH 2 // M Ä N N E R -->
       <div class="bereich_zwei">
-        <div class="grosser_abstand"></div>
+        <div class="abstand"></div>
         <div class="raster_bereich_zwei">
           <div class="Maenner">M</div>
           <div class="Maenner">ä</div>
@@ -73,8 +73,9 @@
           <div class="Maenner">e</div>
           <div class="Maenner">r</div>
         </div>
-        <div class="grosser_abstand"></div>
-        <div class="grosser_abstand"></div>
+        <div class="abstand"></div>
+        <div class="abstand"></div>
+        <div class="abstand"></div>
 
       </div>
 
@@ -95,6 +96,8 @@
           </div>
 
         </div>
+
+        <div class="abstand"></div>
 
       </div>
 
@@ -126,8 +129,9 @@
 
         </div>
 
-        <div class="grosser_abstand"></div>
-        <div class="grosser_abstand"></div>
+        <div class="abstand"></div>
+        <div class="abstand"></div>
+        <div class="abstand"></div>
 
 
       </div>
@@ -179,8 +183,8 @@
 
         </div>
 
-        <div class="grosser_abstand"></div>
-        <div class="grosser_abstand"></div>
+        <div class="abstand"></div>
+        <div class="abstand"></div>
 
       </div>
 
@@ -231,14 +235,16 @@
         </div>
 
 
+        <div class="grosser_abstand"></div>
+        <div class="grosser_abstand"></div>
+        <div class="grosser_abstand"></div>
+
+        <div class="strophe_titel_klein">?</div>
+        <div class="abstand"></div>
 
         </div>
-        <div class="grosser_abstand"></div>
-        <div class="grosser_abstand"></div>
-        <div class="grosser_abstand"></div>
-        <div class="grosser_abstand"></div>
-        <div class="grosser_abstand"></div>
-        <div class="grosser_abstand"></div>
+
+
 
 
 
