--- a/00_Website_Text_Projekt/ND_Website_Text_Projekt.html
+++ b/00_Website_Text_Projekt/ND_Website_Text_Projekt.html
@@ -22,7 +22,8 @@
     <!-- BEREICH 1 // NEHMEN, GEBEN, … -->
     <div class="bereich_eins">
 
-      <div class="raster_bereich_eins">
+      <div class="raster_bereich_eins checkview">
+
 
         <div class="eins_song_zeile">
           <div class="strophe_titel">nehm’n</div>
@@ -57,6 +58,41 @@
 
       </div>
 
+      <div class="raster_bereich_eins  checkview">
+
+        <div class="eins_song_zeile">
+          <div class="strophe_titel">kaufen</div>
+          <div class="strophe_grundtext">Frauen</div>
+        </div>
+
+        <div class="zwei_song_zeile">
+          <div class="strophe_titel">steh’n</div>
+          <div class="strophe_grundtext">ständig unter Strom</div>
+        </div>
+
+        <div class="drei_song_zeile">
+          <div class="strophe_titel">baggern</div>
+          <div class="strophe_grundtext">wie blöde</div>
+        </div>
+
+        <div class="vier_song_zeile">
+          <div class="strophe_titel">lügen</div>
+          <div class="strophe_grundtext">am Telefon und</div>
+        </div>
+
+        <div class="fuenf_song_zeile">
+          <div class="strophe_titel">sind</div>
+          <div class="strophe_grundtext">allzeit bereit</div>
+        </div>
+
+        <div class="sechs_song_zeile">
+          <div class="strophe_titel">bestechen</div>
+          <div class="strophe_grundtext">durch ihr Geld <br>und ihre Lässigkeit</div>
+        </div>
+
+
+      </div>
+
     </div>
 
 
@@ -65,13 +101,13 @@
       <!-- BEREICH 2 // M Ä N N E R -->
       <div class="bereich_zwei">
         <div class="abstand"></div>
-        <div class="raster_bereich_zwei">
-          <div class="Maenner">M</div>
-          <div class="Maenner">ä</div>
-          <div class="Maenner">n</div>
-          <div class="Maenner">n</div>
-          <div class="Maenner">e</div>
-          <div class="Maenner">r</div>
+        <div class="raster_bereich_zwei checkview">
+          <div class="maenner">M</div>
+          <div class="maenner">ä</div>
+          <div class="maenner">n</div>
+          <div class="maenner">n</div>
+          <div class="maenner">e</div>
+          <div class="maenner">r</div>
         </div>
         <div class="abstand"></div>
         <div class="abstand"></div>
@@ -83,7 +119,7 @@
       <!-- BEREICH 3 // HABENS (refrain) -->
       <div class="bereich_drei">
 
-        <div class="raster_bereich_drei">
+        <div class="raster_bereich_drei checkview">
 
           <div class="sieben_song_zeile">
             <div class="strophe_titel">haben’s</div>
@@ -105,7 +141,7 @@
       <!-- BEREICH 4 // AUSSEN HART, INNEN GANZ -->
       <div class="bereich_vier">
 
-        <div class="raster_bereich_vier">
+        <div class="raster_bereich_vier checkview">
 
           <div class="aussen">
             <div class="vertikal">aussen</div>
@@ -139,7 +175,7 @@
       <!-- BEREICH 5 // KIND, MANN GEEICHT -->
       <div class="bereich_fuenf">
 
-        <div class="raster_bereich_fuenf">
+        <div class="raster_bereich_fuenf checkview">
 
           <div class="werden_als">
             <div class="strophe_titel">werden als</div>
@@ -191,7 +227,7 @@
 
       <!-- BEREICH 6 // Wann ist ein Mann ein Mann? -->
       <div class="bereich_sechs">
-        <div class="raster_eins_bereich_sechs">
+        <div class="raster_eins_bereich_sechs checkview">
           <div class="wann_ist">
             <div class="strophe_titel_klein">wann ist</div>
           </div>
@@ -206,7 +242,7 @@
 
         <div class="grosser_abstand"></div>
 
-        <div class="raster_zwei_bereich_sechs">
+        <div class="raster_zwei_bereich_sechs checkview">
           <div class="wann_ist">
             <div class="strophe_titel_klein">wann ist</div>
           </div>
@@ -221,7 +257,7 @@
 
         <div class="grosser_abstand"></div>
 
-        <div class="raster_zwei_bereich_sechs">
+        <div class="raster_zwei_bereich_sechs checkview">
           <div class="wann_ist">
             <div class="strophe_titel_klein">wann ist</div>
           </div>
@@ -238,9 +274,6 @@
         <div class="grosser_abstand"></div>
         <div class="grosser_abstand"></div>
         <div class="grosser_abstand"></div>
-
-        <div class="strophe_titel_klein">?</div>
-        <div class="abstand"></div>
 
         </div>
 
@@ -256,6 +289,7 @@
 
 </body>
 
-
+<script src="./javascript/viewport.js" ></script>
+<!-- <script type="text/javascript" src="./javascript/viewport.js"></script> -->
 
 </html>
