--- a/00_Website_Text_Projekt/_Sicherheitskopie/06_06_About_Button_rechts_unten/ND_Website_Text_Projekt.html
+++ b/00_Website_Text_Projekt/_Sicherheitskopie/06_06_About_Button_rechts_unten/ND_Website_Text_Projekt.html
@@ -20,87 +20,93 @@
   <div class="content">
 
     <!-- BEREICH 1 // NEHMEN, GEBEN, … -->
+    <div class="weisser_block_eins">
 
-    <div class="bereich_eins">
-
-      <div class="raster_bereich_eins checkview">
+      <div class="about">about</div>
 
 
-        <div class="eins_song_zeile">
-          <div class="strophe_titel">nehm’n</div>
-          <div class="strophe_grundtext">in den Arm</div>
+      <div class="bereich_eins">
+
+        <div class="raster_bereich_eins checkview">
+
+
+          <div class="eins_song_zeile">
+            <div class="strophe_titel">nehm’n</div>
+            <div class="strophe_grundtext">in den Arm</div>
+          </div>
+
+          <div class="zwei_song_zeile">
+            <div class="strophe_titel">geben</div>
+            <div class="strophe_grundtext">Geborgenheit</div>
+          </div>
+
+          <div class="drei_song_zeile">
+            <div class="strophe_titel">weinen</div>
+            <div class="strophe_grundtext">heimlich</div>
+          </div>
+
+          <div class="vier_song_zeile">
+            <div class="strophe_titel">brauchen</div>
+            <div class="strophe_grundtext">viel Zärtlichkeit und</div>
+          </div>
+
+          <div class="fuenf_song_zeile">
+            <div class="strophe_titel">sind</div>
+            <div class="strophe_grundtext">so verletzlich</div>
+          </div>
+
+          <div class="sechs_song_zeile">
+            <div class="strophe_titel">sind</div>
+            <div class="strophe_grundtext">auf dieser Welt <br>einfach unersetzlich</div>
+          </div>
+
+
         </div>
 
-        <div class="zwei_song_zeile">
-          <div class="strophe_titel">geben</div>
-          <div class="strophe_grundtext">Geborgenheit</div>
+
+        <div class="mittlerer_abstand"></div>
+
+
+        <div class="raster_bereich_eins  checkview">
+
+          <div class="eins_song_zeile">
+            <div class="strophe_titel">kaufen</div>
+            <div class="strophe_grundtext">Frauen</div>
+          </div>
+
+          <div class="zwei_song_zeile">
+            <div class="strophe_titel">steh’n</div>
+            <div class="strophe_grundtext">ständig unter Strom</div>
+          </div>
+
+          <div class="drei_song_zeile">
+            <div class="strophe_titel">baggern</div>
+            <div class="strophe_grundtext">wie blöde</div>
+          </div>
+
+          <div class="vier_song_zeile">
+            <div class="strophe_titel">lügen</div>
+            <div class="strophe_grundtext">am Telefon und</div>
+          </div>
+
+          <div class="fuenf_song_zeile">
+            <div class="strophe_titel">sind</div>
+            <div class="strophe_grundtext">allzeit bereit</div>
+          </div>
+
+          <div class="sechs_song_zeile">
+            <div class="strophe_titel">bestechen</div>
+            <div class="strophe_grundtext">durch ihr Geld <br>und ihre Lässigkeit</div>
+          </div>
+
+
         </div>
 
-        <div class="drei_song_zeile">
-          <div class="strophe_titel">weinen</div>
-          <div class="strophe_grundtext">heimlich</div>
-        </div>
-
-        <div class="vier_song_zeile">
-          <div class="strophe_titel">brauchen</div>
-          <div class="strophe_grundtext">viel Zärtlichkeit und</div>
-        </div>
-
-        <div class="fuenf_song_zeile">
-          <div class="strophe_titel">sind</div>
-          <div class="strophe_grundtext">so verletzlich</div>
-        </div>
-
-        <div class="sechs_song_zeile">
-          <div class="strophe_titel">sind</div>
-          <div class="strophe_grundtext">auf dieser Welt <br>einfach unersetzlich</div>
-        </div>
+        <div class="abstand"></div>
+        <div class="abstand"></div>
 
 
       </div>
-
-
-      <div class="mittlerer_abstand"></div>
-
-
-      <div class="raster_bereich_eins  checkview">
-
-        <div class="eins_song_zeile">
-          <div class="strophe_titel">kaufen</div>
-          <div class="strophe_grundtext">Frauen</div>
-        </div>
-
-        <div class="zwei_song_zeile">
-          <div class="strophe_titel">steh’n</div>
-          <div class="strophe_grundtext">ständig unter Strom</div>
-        </div>
-
-        <div class="drei_song_zeile">
-          <div class="strophe_titel">baggern</div>
-          <div class="strophe_grundtext">wie blöde</div>
-        </div>
-
-        <div class="vier_song_zeile">
-          <div class="strophe_titel">lügen</div>
-          <div class="strophe_grundtext">am Telefon und</div>
-        </div>
-
-        <div class="fuenf_song_zeile">
-          <div class="strophe_titel">sind</div>
-          <div class="strophe_grundtext">allzeit bereit</div>
-        </div>
-
-        <div class="sechs_song_zeile">
-          <div class="strophe_titel">bestechen</div>
-          <div class="strophe_grundtext">durch ihr Geld <br>und ihre Lässigkeit</div>
-        </div>
-
-
-      </div>
-
-      <div class="abstand"></div>
-      <div class="abstand"></div>
-
 
     </div>
 
@@ -282,11 +288,6 @@
         <div class="grosser_abstand"></div>
         <div class="grosser_abstand"></div>
         <div class="grosser_abstand"></div>
-
-      </div>
-
-      <div class="bereich_sieben">
-        <a href="ND_Ueber_Projekt.html">Über dieses <br>Projekt</a>
 
       </div>
 
