--- a/00_Website_Text_Projekt/ND_Website_Text_Projekt.html
+++ b/00_Website_Text_Projekt/ND_Website_Text_Projekt.html
@@ -284,11 +284,11 @@
         <div class="grosser_abstand"></div>
 
       </div>
-
+<!--
       <div class="bereich_sieben">
         <a href="ND_Ueber_Projekt.html">Über dieses <br>Projekt</a>
 
-      </div>
+      </div> -->
 
 
 
