Impressum, Animations, Buttons, Scroll Indicator

--- a/00_Website_Text_Projekt/_Sicherheitskopie/kind_mann_einzeln/ND_Website_Text_Projekt.html
+++ b/00_Website_Text_Projekt/_Sicherheitskopie/kind_mann_einzeln/ND_Website_Text_Projekt.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Wann?</title>
+  <title>Wer nimmt in den Arm?</title>
 
   <link rel="stylesheet" type="text/css" href="./styles/normalize.css">
   <link rel="stylesheet" type="text/css" href="./styles/main.css">
@@ -18,11 +18,6 @@
 <body>
 
   <div class="content">
-
-    <div class="progress-container">
-        <div class="progress-bar" id="myBar"></div>
-      </div>
-
 
     <!-- BEREICH 1 // NEHMEN, GEBEN, … -->
 
@@ -194,20 +189,36 @@
             <div class="strophe_titel">werden als</div>
           </div>
 
-          <div class="kind">
-            <div class="auszeichnung_fett">Kind</div>
+          <div class="k">
+            <div class="auszeichnung_fett">K</div>
           </div>
-
+          <div class="i">
+            <div class="auszeichnung_fett">I</div>
+          </div>
+          <div class="n_kind">
+            <div class="auszeichnung_fett">N</div>
+          </div>
+          <div class="d">
+            <div class="auszeichnung_fett">D</div>
+          </div>
 
 
           <div class="schon_als">
             <div class="strophe_titel">schon als</div>
           </div>
 
-          <div class="mann">
-            <div class="auszeichnung_fett">Mann</div>
+          <div class="m">
+            <div class="auszeichnung_fett">M</div>
           </div>
-
+          <div class="a">
+            <div class="auszeichnung_fett">A</div>
+          </div>
+          <div class="n_mann_eins">
+            <div class="auszeichnung_fett">N</div>
+          </div>
+          <div class="n_mann_zwei">
+            <div class="auszeichnung_fett">N</div>
+          </div>
 
           <div class="geeicht">
             <div class="strophe_titel">geeicht</div>
@@ -273,54 +284,11 @@
       </div>
 
       <div class="bereich_sieben">
-        <div class="raster_bereich_sieben">
-
-          <div class="infos">
-            <p>© Nina Diem · 2020 <br>
-              IAD2019 <br>
-              Grids&nbsp;&​&nbsp;Modules <br>
-              Schule für Gestaltung Zürich
-
-            </p>
-          </div>
-
-          <div class="song">
-            <p>Text: <br><a href="https://open.spotify.com/track/0o8eQLFcietIkRBK0GflGZ?si=smjYk_phTsK50FqQDq0WBgauf" target="_blank">© Männer · Herbert Grönemeyer · 1984</a>
-            </p>
-            <br>
-            <iframe src="https://open.spotify.com/embed/track/0o8eQLFcietIkRBK0GflGZ" width="80" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-
-          </div>
-
-
-
-        </div>
-
-
-
+        <a href="ND_Ueber_Projekt.html">Über dieses <br>Projekt</a>
 
       </div>
 
-      <div class="kleiner_abstand"></div>
-
-
-        <div class="top_button">
-
-          <a href="#top">
-            <img class="jump-top" src="./links/top.svg" alt="back to top button">
-          </a>
-
-        </div>
-
-        <div class="kleiner_abstand"></div>
-
-
-
-
-
-
-
-
+      <iframe src="https://open.spotify.com/embed/track/0o8eQLFcietIkRBK0GflGZ" width="280" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 
 
 
@@ -336,17 +304,6 @@
 </body>
 
 <script src="./javascript/viewport.js"></script>
-
-<script>
-// When the user scrolls the page, execute myFunction
-window.onscroll = function() {myFunction()};
-
-function myFunction() {
-  var winScroll = document.body.scrollTop || document.documentElement.scrollTop;
-  var height = document.documentElement.scrollHeight - document.documentElement.clientHeight;
-  var scrolled = (winScroll / height) * 100;
-  document.getElementById("myBar").style.width = scrolled + "%";
-}
-</script>
+<!-- <script type="text/javascript" src="./javascript/viewport.js"></script> -->
 
 </html>
