Anpassungen Hanna individuelller Data-Offset für viewport trigger

--- a/00_Website_Text_Projekt/ND_Website_Text_Projekt.html
+++ b/00_Website_Text_Projekt/ND_Website_Text_Projekt.html
@@ -114,7 +114,7 @@
       <!-- BEREICH 2 // M Ä N N E R -->
       <div class="bereich_zwei">
         <div class="abstand"></div>
-        <div class="raster_bereich_zwei checkview">
+        <div class="raster_bereich_zwei checkview" data-attr-offset="200">
           <div class="maenner">M</div>
           <div class="maenner">ä</div>
           <div class="maenner">n</div>
