--- a/00_Website_Text_Projekt/ND_Website_Text_Projekt.html
+++ b/00_Website_Text_Projekt/ND_Website_Text_Projekt.html
@@ -148,6 +148,9 @@
 
         <div class="abstand"></div>
         <div class="abstand"></div>
+        <!-- <div class="kleiner_abstand"></div>
+        <div class="kleiner_abstand"></div> -->
+
 
       </div>
 
