--- a/00_Website_Text_Projekt/_Praesi/D_Rasteraufbau_Code/Version_1/V1_Raster.html
+++ b/00_Website_Text_Projekt/_Praesi/D_Rasteraufbau_Code/Version_1/V1_Raster.html
@@ -19,10 +19,9 @@
 
   <div class="content">
 
-    <!-- BEREICH 1 // NEHMEN, GEBEN, … -->
     <div class="bereich_eins">
 
-      <div class="raster_bereich_eins checkview">
+      <div class="raster_bereich_eins">
 
 
         <div class="eins_song_zeile">
@@ -58,7 +57,11 @@
 
       </div>
 
-      <div class="raster_bereich_eins">
+      <div class="abstand"></div>
+      <div class="abstand"></div>
+
+
+      <div class="raster_bereich_eins checkview">
 
         <div class="eins_song_zeile">
           <div class="strophe_titel">kaufen</div>
